k8s/okteto.yml
# Oktetoの自動スリープ対策
# okteto.ymlを反映したあとでapi.ymlを反映することでスリープ防止
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hobigon-api-deployment
  labels:
    app: hobigon-api
  namespace: hobigon-yyh-gl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hobigon-api
  template:
    metadata:
      labels:
        app: hobigon-api
      namespace: hobigon-yyh-gl
    spec:
      containers:
        - name: hobigon-api
          image: ghcr.io/yyh-gl/hobigon-golang-api-server/prd/hobigon-api:latest
          ports:
            - containerPort: 3000
