k8s/grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: hobigon-yyh-gl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      namespace: hobigon-yyh-gl
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: hobigon-yyh-gl
  annotations:
    dev.okteto.com/auto-ingress: "private"
spec:
  type: ClusterIP
  ports:
    - name: grafana
      port: 9091
      targetPort: 3000
  selector:
    app: grafana
