k8s/mysql.yml
# Oktetoでは不要
#kind: PersistentVolume
#apiVersion: v1
#metadata:
#  name: mysql-pv-volume
#  labels:
#    type: local
#  namespace: hobigon-yyh-gl
#spec:
#  storageClassName: manual
#  capacity:
#    storage: 3Gi
#  accessModes:
#    - ReadWriteOnce
#  hostPath:
#    path: "/mnt/data"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: hobigon-yyh-gl
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
      namespace: hobigon-yyh-gl
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: hobigon-yyh-gl
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
