k8s/prometheus.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: hobigon-yyh-gl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      namespace: hobigon-yyh-gl
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus
            - name: prometheus-storage-volume
              mountPath: /prometheus
      volumes:
        - name: prometheus-storage-volume
          persistentVolumeClaim:
            claimName: prometheus-pv-claim
        - name: prometheus-config-volume
          configMap:
            name: prometheus-server-conf
            defaultMode: 420
---

apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: hobigon-yyh-gl
  annotations:
    dev.okteto.com/auto-ingress: "private"
    prometheus.io/scrape: "true"
    prometheus.io/port:   "9090"
spec:
  type: ClusterIP
  ports:
    - name: prometheus
      port: 9090
  selector:
    app: prometheus
