k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hobigon-api-deployment
  labels:
    app: hobigon-api
  namespace: hobigon-yyh-gl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hobigon-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: hobigon-api
      namespace: hobigon-yyh-gl
    spec:
      containers:
        - name: hobigon-api
          image: ghcr.io/yyh-gl/hobigon-golang-api-server/rest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              port: 3000
              path: /api/health
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hobigon-api-service
  namespace: hobigon-yyh-gl
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: hobigon-api
---
# OktetoはIngressのみサポート（LoadBalancerをサポートしていない）
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    dev.okteto.com/generate-host: "true"
  name: hobigon-api-ingress
  namespace: hobigon-yyh-gl
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hobigon-api-service
                port:
                  number: 3000
